--- a/SYMMETRIC_CIPHER/SYMMETRIC.ipynb
+++ b/SYMMETRIC_CIPHER/SYMMETRIC.ipynb
@@ -788,10 +788,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "crypto{0\n",
+      "crypto{0f\n",
+      "crypto{0fb\n",
+      "crypto{0fb_\n",
+      "crypto{0fb_1\n",
+      "crypto{0fb_15\n",
+      "crypto{0fb_15_\n",
+      "crypto{0fb_15_5\n",
+      "crypto{0fb_15_5y\n",
+      "crypto{0fb_15_5ym\n",
+      "crypto{0fb_15_5ymm\n",
+      "crypto{0fb_15_5ymm3\n",
+      "crypto{0fb_15_5ymm37\n",
+      "crypto{0fb_15_5ymm37r\n",
+      "crypto{0fb_15_5ymm37r1\n",
+      "crypto{0fb_15_5ymm37r1c\n",
+      "crypto{0fb_15_5ymm37r1c4\n",
+      "crypto{0fb_15_5ymm37r1c4l\n",
+      "crypto{0fb_15_5ymm37r1c4l_\n",
+      "crypto{0fb_15_5ymm37r1c4l_!\n",
+      "crypto{0fb_15_5ymm37r1c4l_!!\n",
+      "crypto{0fb_15_5ymm37r1c4l_!!!\n",
+      "crypto{0fb_15_5ymm37r1c4l_!!!1\n",
+      "crypto{0fb_15_5ymm37r1c4l_!!!11\n",
+      "crypto{0fb_15_5ymm37r1c4l_!!!11!\n",
+      "crypto{0fb_15_5ymm37r1c4l_!!!11!}\n",
+      "crypto{0fb_15_5ymm37r1c4l_!!!11!}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Symmetry\n",
+    "\n",
+    "import requests\n",
+    "import json\n",
+    "from binascii import *\n",
+    "import string\n",
+    "\n",
+    "# ono to one comparison plain->cipher == brute force attack\n",
+    "\n",
+    "def encrypted_flag():\n",
+    "    url = \"http://aes.cryptohack.org/symmetry/encrypt_flag/\"\n",
+    "    r = requests.get(url)\n",
+    "    c = (json.loads(r.text))['ciphertext']\n",
+    "    iv = c[:32]\n",
+    "    ct = c[32:]\n",
+    "    return iv, ct \n",
+    "\n",
+    "def get_encryption(pt_hex, iv_hex):\n",
+    "    url = \"http://aes.cryptohack.org/symmetry/encrypt/\"+pt_hex+\"/\"+iv_hex\n",
+    "    r = requests.get(url)\n",
+    "    try:\n",
+    "        ct = (json.loads(r.text))['ciphertext']\n",
+    "    except:\n",
+    "        ct = (json.loads(r.text))['error']\n",
+    "    return ct\n",
+    "\n",
+    "iv,ct = encrypted_flag()\n",
+    "pt = b'crypto{'\n",
+    "\n",
+    "while True:\n",
+    "    for i in string.printable:\n",
+    "        e = get_encryption(hexlify(pt+i.encode()).decode(),iv)\n",
+    "        if e == ct[:2*(len(pt)+1)] :\n",
+    "            pt += i.encode()\n",
+    "            print(pt.decode())\n",
+    "            break\n",
+    "    if chr(pt[-1])=='}':\n",
+    "        print(pt.decode())\n",
+    "        break\n",
+    "\n",
+    "# OK crypto{0fb_15_5ymm37r1c4l_!!!11!}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# BEAN COUNTER\n",
+    "\n",
+    "from Crypto.Cipher import AES\n",
+    "import requests\n",
+    "import json\n",
+    "from binascii import *\n",
+    "import string\n",
+    "import os \n",
+    "\n",
+    "os.chdir(os.path.dirname(os.path.abspath('')))\n",
+    "# By default thr counter does not increment its value (step_up=False)\n",
+    "# So we have to attack ECB knowing the beginning of the plaintext == PNG header\n",
+    "class StepUpCounter(object):\n",
+    "    def __init__(self, step_up=False):\n",
+    "        self.value = os.urandom(16).hex()\n",
+    "        self.step = 1\n",
+    "        self.stup = step_up\n",
+    "\n",
+    "    def increment(self):\n",
+    "        if self.stup:\n",
+    "            self.newIV = hex(int(self.value, 16) + self.step)\n",
+    "        else:\n",
+    "            self.newIV = hex(int(self.value, 16) - self.stup)\n",
+    "        self.value = self.newIV[2:len(self.newIV)]\n",
+    "        return bytes.fromhex(self.value.zfill(32))\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        self.increment()\n",
+    "        return self.value\n",
+    "\n",
+    "def encrypt():\n",
+    "    url = \"http://aes.cryptohack.org/bean_counter/encrypt/\"\n",
+    "    rsp = requests.get(url)\n",
+    "    return rsp.json()['encrypted']\n",
+    "\n",
+    "\n",
+    "# Magic Header + IHDR chunk length and type\n",
+    "png_header= bytes([0x89, 0x50, 0x4e, 0x47, 0x0d, 0x0a, 0x1a, 0x0a, 0x00, 0x00, 0x00, 0x0D, 0x49, 0x48, 0x44, 0x52])\n",
+    "\n",
+    "cipher_bytes = bytes.fromhex(encrypt())\n",
+    "\n",
+    "key = []\n",
+    "\n",
+    "for i in range(len(png_header)):\n",
+    "    key.append(png_header[i] ^ cipher_bytes[i])\n",
+    "\n",
+    "key = bytes(key)\n",
+    "\n",
+    "png = [0]*len(cipher_bytes)\n",
+    "\n",
+    "# repeat key xoring with file\n",
+    "\n",
+    "for i in range(len(png)):\n",
+    "    png[i] = cipher_bytes[i] ^key[i%len(key)]\n",
+    "\n",
+    "with open('decrypted.png', 'wb') as fd:\n",
+    "    fd.write(bytes(png))\n",
+    "\n",
+    "# OK\n",
+    "# crypto{hex_bytes_beans}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0e9e66eaf99f9b559fe9e67be9f2dd6b6f71e68d5dbfb513a302ee7ee696ff083973d8e05b99bd'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# CRTIME \n",
+    "\n",
+    "from Crypto.Cipher import AES\n",
+    "from Crypto.Util import Counter\n",
+    "import zlib\n",
+    "import requests\n",
+    "import json\n",
+    "from binascii import *\n",
+    "import string\n",
+    "\n",
+    "# KEY = ?\n",
+    "# FLAG = ?\n",
+    "\n",
+    "\n",
+    "# @chal.route('/ctrime/encrypt/<plaintext>/')\n",
+    "# def encrypt(plaintext):\n",
+    "#     plaintext = bytes.fromhex(plaintext)\n",
+    "\n",
+    "#     iv = int.from_bytes(os.urandom(16), 'big')\n",
+    "#     cipher = AES.new(KEY, AES.MODE_CTR, counter=Counter.new(128, initial_value=iv))\n",
+    "#     encrypted = cipher.encrypt(zlib.compress(plaintext + FLAG.encode()))\n",
+    "\n",
+    "#     return {\"ciphertext\": encrypted.hex()}\n",
+    "\n",
+    "def encrypt(hex_text):\n",
+    "    url = \"http://aes.cryptohack.org/ctrime/encrypt/\"+hex_text+\"/\"\n",
+    "    r = requests.get(url)\n",
+    "    try:\n",
+    "        ct = (json.loads(r.text))['ciphertext']\n",
+    "    except:\n",
+    "        ct = (json.loads(r.text))['error']\n",
+    "    return ct\n",
+    "\n",
+    "encrypt(\"lolilol\".encode().hex())"
+   ]
   }
  ],
  "metadata": {
